[tool.poetry]
name = "flask-oidc"
version = "0.1.0"
description = ""
authors = ["flaviofernandes004 <flaviofernandes004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-oidc-ex = "^0.5.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

